<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/reset_content_description"
    tools:context="app.lloyd.com.mocktestapp.loginorsignin.ResetPasswordFragment">

    <EditText
        android:id="@+id/et_new_password"
        style="@style/Base.Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/Base.Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_new_password"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_confirm_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/btn_reset_password" />

</RelativeLayout>
