<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/tv_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_user_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_form_title"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name_header"
        android:cursorVisible="true"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:backgroundTint="@android:color/black" />

    <TextView
        android:id="@+id/tv_pwd_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_user_name"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_pwd_header"
        android:cursorVisible="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:backgroundTint="@android:color/black" />

    <TextView
        android:id="@+id/tv_login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pwd"
        android:layout_marginTop="@dimen/dp_8"
        android:drawablePadding="@dimen/dp_16"
        android:drawableStart="@android:drawable/ic_dialog_alert"
        android:gravity="center"
        android:text="@string/error_in_login"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_error"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/bg_button"
        android:enabled="false"
        android:text="@string/button_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:text="@string/forgot_password" />

</RelativeLayout>