<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/place_details_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:contentDescription="@string/place_details_content_description"
    android:focusable="true"
    android:padding="@dimen/dp_16">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_place_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/place_details"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_place_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_16"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_place_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_place"
            android:text="@string/place_name"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/iv_place"
            android:layout_toEndOf="@+id/tv_place_name_header"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_place_rating_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_place_name_header"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/place_rating"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_place_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_place_name_header"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_toEndOf="@+id/tv_place_rating_header"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_place_desc_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_place_rating_header"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/place_description"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_place_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_place_desc_header"
            android:layout_marginTop="@dimen/dp_16"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_place_comment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_place_desc"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/place_comment"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_place_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_place_comment_header"
            android:layout_marginTop="@dimen/dp_16"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>